--- a/commandez.html
+++ b/commandez.html
@@ -520,7 +520,7 @@
     <section id="commandez" class="hero">
         <div class="container">
             <!-- تم تحويل النص إلى زر دفع -->
-            <a href="https://eccp.poste.dz/" class="order-main-btn" target="_blank">
+            <a href="https://www.poste.dz/services/professional/baridimobweb" class="order-main-btn" target="_blank">
                 Commandez Vos Documents
             </a>
             <p>Choisissez vos documents et payez facilement par Mobile Money.</p>
@@ -702,7 +702,7 @@
         </div>
         
         <!-- زر الطلب الرئيسي في الأسفل - تم تعديل الرابط -->
-        <a href="https://eccp.poste.dz/" class="order-main-btn" target="_blank">
+        <a href="https://www.poste.dz/services/professional/baridimobweb/" class="order-main-btn" target="_blank">
             Commandez Vos Documents
         </a>
     </section>
