--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="GhaniPharma - Votre plateforme complète pour les études pharmaceutiques. Cours, TPs, TDs, examens et ressources pédagogiques pour étudiants en pharmacie.">
+    <meta name="keywords" content="pharmacie, études pharmaceutiques, cours pharmacie, TPs pharmacie, TDs pharmacie, examens pharmacie, étudiants pharmacie, ressources pédagogiques, GhaniPharma, sciences pharmaceutiques">
+    <meta name="author" content="GhaniPharma">
+    <meta name="robots" content="index, follow">
+    <!-- للشبكات الاجتماعية -->
+    <meta property="og:title" content="GhaniPharma">
+    <meta property="og:description" content="Votre plateforme complète pour les études pharmaceutiques">
+    <meta property="og:image" content="url-لصورة-الموقع">
+    <!-- للموقع على الجوال -->
+    <meta name="theme-color" content="#6a1b9a">
     <title>GhaniPharma</title>
     <!-- إضافة Font Awesome للأيقونات -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -866,10 +876,23 @@
                 <h2><i class="fas fa-info-circle"></i> À propos</h2>
                 <div class="about-container">
                     <div class="about-image">
-                        <img src="https://raw.githubusercontent.com/ghanroub/pharmacie/refs/heads/main/ghanipharma2/ChatGPT%20Image%2010%20oct.%202025%2C%2012_32_58(1)(1).png" alt="GhaniPharma">
+                        <img src="https://raw.githubusercontent.com/ghanroub/pharmacie/refs/heads/main/ghanipharma2/ChatGPT%20Image%2010%20oct.%202025%2C%2022_46_50.png" alt="GhaniPharma">
                     </div>
                     <div class="about-content">
-                        <p>Ce site a été créé pour aider les étudiants en pharmacie à comprendre facilement leurs cours, TPs, TDs, réviser efficacement, et réussir leurs examens. Vous y trouverez des explications claires, des fiches résumées, des vidéos pédagogiques, et bien plus encore.</p>
+                        <p><p>Ce site a été créé pour aider les étudiants en pharmacie à comprendre facilement leurs 
+                        <a href="cours.html" style="color: #00bcd4; text-decoration: none; font-weight: bold; transition: all 0.3s ease; border-bottom: 1px solid transparent;" 
+                           onmouseover="this.style.color='#4dd0e1'; this.style.borderBottomColor='#4dd0e1'" 
+                           onmouseout="this.style.color='#00bcd4'; this.style.borderBottomColor='transparent'">cours</a>, 
+                        <a href="tps.html" style="color: #00bcd4; text-decoration: none; font-weight: bold; transition: all 0.3s ease; border-bottom: 1px solid transparent;" 
+                           onmouseover="this.style.color='#4dd0e1'; this.style.borderBottomColor='#4dd0e1'" 
+                           onmouseout="this.style.color='#00bcd4'; this.style.borderBottomColor='transparent'">TPs</a>, 
+                        <a href="tds.html" style="color: #00bcd4; text-decoration: none; font-weight: bold; transition: all 0.3s ease; border-bottom: 1px solid transparent;" 
+                           onmouseover="this.style.color='#4dd0e1'; this.style.borderBottomColor='#4dd0e1'" 
+                           onmouseout="this.style.color='#00bcd4'; this.style.borderBottomColor='transparent'">TDs</a>, 
+                        réviser efficacement, et réussir leurs 
+                        <a href="examens.html" style="color: #00bcd4; text-decoration: none; font-weight: bold; transition: all 0.3s ease; border-bottom: 1px solid transparent;" 
+                           onmouseover="this.style.color='#4dd0e1'; this.style.borderBottomColor='#4dd0e1'" 
+                           onmouseout="this.style.color='#00bcd4'; this.style.borderBottomColor='transparent'">examens</a>. Vous y trouverez des explications claires, des fiches résumées, des vidéos pédagogiques, et bien plus encore.</p></p>
                         <p>Notre objectif est de rendre les sciences pharmaceutiques accessibles à tous, avec des contenus fiables, simples et adaptés au programme universitaire.</p>
                         <p>Que vous soyez en première année ou en fin de cycle, ce site est fait pour vous !</p>
                     </div>
