--- a/cours.html
+++ b/cours.html
@@ -692,7 +692,7 @@
                     <div class="subject-content">
                         <h4 onclick="toggleSemesters(this)">ANATOMIE</h4>
                         <ul>
-                            <li><a href="cour ANATOMIE.html">Semestre 1</a></li>
+                            <li><a href="cours ANATOMIE.html">Semestre 1</a></li>
                         </ul>
                     </div>
                 </div>
