--- a/modules.html
+++ b/modules.html
@@ -932,9 +932,9 @@
                     <div class="subject-content">
                         <h4 onclick="toggleSemesters(this)">BIOCHIMIE CLINIQUE</h4>
                         <ul>
-                            <li><a href="BIOCHIMIE-CLINIQUE-S1.html">Semestre 1</a></li>
-                            <li><a href="BIOCHIMIE-CLINIQUE-S1.html">Semestre 2</a></li>
-                            <li><a href="BIOCHIMIE-CLINIQUE-S1.html">Semestre 3</a></li>
+                            <li><a href="BIOCHIMIE_CLINIQUE_S1.html">Semestre 1</a></li>
+                            <li><a href="BIOCHIMIE_CLINIQUE_S2.html">Semestre 2</a></li>
+                            <li><a href="BIOCHIMIE_CLINIQUE_S3.html">Semestre 3</a></li>
                         </ul>
                     </div>
                 </div>
@@ -945,9 +945,9 @@
                     <div class="subject-content">
                         <h4 onclick="toggleSemesters(this)">HEMOBIOLOGIE</h4>
                         <ul>
-                            <li><a href="HEMOBIOLOGIE-S1.html">Semestre 1</a></li>
-                            <li><a href="HEMOBIOLOGIE-S2.html">Semestre 2</a></li>
-                            <li><a href="HEMOBIOLOGIE-S3.html">Semestre 3</a></li>
+                            <li><a href="HEMOBIOLOGIE_S1.html">Semestre 1</a></li>
+                            <li><a href="HEMOBIOLOGIE_S2.html">Semestre 2</a></li>
+                            <li><a href="HEMOBIOLOGIE_S3.html">Semestre 3</a></li>
                         </ul>
                     </div>
                 </div>
@@ -958,9 +958,9 @@
                     <div class="subject-content">
                         <h4 onclick="toggleSemesters(this)">IMMUNOLOGIE</h4>
                         <ul>
-                            <li><a href="annee4_immunologie_semestre1.html">Semestre 1</a></li>
-                            <li><a href="annee4_immunologie_semestre2.html">Semestre 2</a></li>
-                            <li><a href="annee4_immunologie_semestre3.html">Semestre 3</a></li>
+                            <li><a href="IMMUNOLOGIE_S1.html">Semestre 1</a></li>
+                            <li><a href="IMMUNOLOGIE_S2.html">Semestre 2</a></li>
+                            <li><a href="IMMUNOLOGIE_S3.html">Semestre 3</a></li>
                         </ul>
                     </div>
                 </div>
@@ -971,9 +971,9 @@
                     <div class="subject-content">
                         <h4 onclick="toggleSemesters(this)">MICROBIOLOGIE</h4>
                         <ul>
-                            <li><a href="annee4_microbiologie_semestre1.html">Semestre 1</a></li>
-                            <li><a href="annee4_microbiologie_semestre2.html">Semestre 2</a></li>
-                            <li><a href="annee4_microbiologie_semestre3.html">Semestre 3</a></li>
+                            <li><a href="MICROBIOLOGIE_S1.html">Semestre 1</a></li>
+                            <li><a href="MICROBIOLOGIE_S2.html">Semestre 2</a></li>
+                            <li><a href="MICROBIOLOGIE_S3.html">Semestre 3</a></li>
                         </ul>
                     </div>
                 </div>
@@ -984,9 +984,9 @@
                     <div class="subject-content">
                         <h4 onclick="toggleSemesters(this)">PARASITOLOGIE</h4>
                         <ul>
-                            <li><a href="annee4_parasitologie_semestre1.html">Semestre 1</a></li>
-                            <li><a href="annee4_parasitologie_semestre2.html">Semestre 2</a></li>
-                            <li><a href="annee4_parasitologie_semestre3.html">Semestre 3</a></li>
+                            <li><a href="PARASITOLOGIE_S1.html">Semestre 1</a></li>
+                            <li><a href="PARASITOLOGIE_S2.html">Semestre 2</a></li>
+                            <li><a href="PARASITOLOGIE_S3.html">Semestre 3</a></li>
                         </ul>
                     </div>
                 </div>
