--- a/index.html
+++ b/index.html
@@ -1112,7 +1112,7 @@
                         <p>N'hésitez pas à nous contacter par :</p>
                         <p>
                             <a href="tel:+213123456789">Téléphone</a> | 
-                            <a href="mailto:ghanipharmadz@gmail.com">Email</a> | 
+                            <a href="mailto:ghanipharmadz@gmail.com" target="_blank">Email</a> | 
                             <a href="https://wa.me/213123456789" target="_blank">WhatsApp</a> | 
                             <a href="https://t.me/ghani_rouabah" target="_blank">Telegram</a> | 
                             <a href="https://www.facebook.com/ghani.rouabah.2025" target="_blank">Facebook</a> | 
