--- a/modules.html
+++ b/modules.html
@@ -941,7 +941,7 @@
                 
                 <!-- المادة 2 -->
                 <div class="subject-card">
-                    <div class="subject-image" style="background-image: url('https://raw.githubusercontent.com/Ghani-Rouabah/GhaniPharma/refs/heads/main/GhaniPharma%20photo/COVID's%20Long%20Haul_%20Virus%20Lingers%20in%20Blood%20Years%20After%20Infection%20-%20Neuroscience%20News.jpeg')"></div>
+                    <div class="subject-image" style="background-image: url('https://raw.githubusercontent.com/Ghani-Rouabah/GhaniPharma/refs/heads/main/GhaniPharma%20photo/Capture%20d'%C3%A9cran%202025-11-19%20132522.png')"></div>
                     <div class="subject-content">
                         <h4 onclick="toggleSemesters(this)">HEMOBIOLOGIE</h4>
                         <ul>
