--- a/modules.html
+++ b/modules.html
@@ -941,7 +941,7 @@
                 
                 <!-- المادة 2 -->
                 <div class="subject-card">
-                    <div class="subject-image" style="background-image: url('https://raw.githubusercontent.com/Ghani-Rouabah/GhaniPharma/refs/heads/main/GhaniPharma%20photo/Capture%20d'%C3%A9cran%202025-11-19%20132522.png')"></div>
+                    <div class="subject-image" style="background-image: url('https://raw.githubusercontent.com/Ghani-Rouabah/GhaniPharma/refs/heads/main/GhaniPharma%20photo/t%C3%A9l%C3%A9chargement.jpeg')"></div>
                     <div class="subject-content">
                         <h4 onclick="toggleSemesters(this)">HEMOBIOLOGIE</h4>
                         <ul>
@@ -954,7 +954,7 @@
                 
                 <!-- المادة 3 -->
                 <div class="subject-card">
-                    <div class="subject-image" style="background-image: url('https://raw.githubusercontent.com/Ghani-Rouabah/GhaniPharma/refs/heads/main/GhaniPharma%20photo/t%C3%A9l%C3%A9chargement.jpeg')"></div>
+                    <div class="subject-image" style="background-image: url('https://raw.githubusercontent.com/Ghani-Rouabah/GhaniPharma/refs/heads/main/GhaniPharma%20photo/Antibody%20cocktail%20neutralizes%20SARS-CoV-2%20and%20has%20projected%20protection%20up%20to%2012%20months.jpeg')"></div>
                     <div class="subject-content">
                         <h4 onclick="toggleSemesters(this)">IMMUNOLOGIE</h4>
                         <ul>
