--- a/modules.html
+++ b/modules.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cours - GhaniPharma</title>
+    <title>Moduless - GhaniPharma</title>
     <!-- إضافة Font Awesome للأيقونات -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
@@ -601,10 +601,10 @@
     </div>
     
     <!-- قسم المحتوى الرئيسي -->
-    <section id="cours" class="hero">
+    <section id="modules" class="hero">
         <div class="container">
-            <h1>Cours Disponibles</h1>
-            <p>Liste des cours disponibles pour les étudiants en pharmacie.</p>
+            <h1>Modules Disponibles</h1>
+            <p>Liste des modules disponibles pour les étudiants en pharmacie.</p>
         </div>
         
         <!-- السنة الأولى -->
