--- a/modules.html
+++ b/modules.html
@@ -951,7 +951,7 @@
                 
                 <!-- المادة 2 -->
                 <div class="subject-card">
-                    <div class="subject-image" style="background-image: url('https://raw.githubusercontent.com/Ghani-Rouabah/GhaniPharma/refs/heads/main/GhaniPharma%20photo/t%C3%A9l%C3%A9chargement.jpeg')"></div>
+                    <div class="subject-image" style="background-image: url('https://raw.githubusercontent.com/Ghani-Rouabah/GhaniPharma/refs/heads/main/GhaniPharma%20photo/FFFFFFFFLHI.jpeg')"></div>
                     <div class="subject-content">
                         <h4 onclick="toggleSemesters(this)">HEMOBIOLOGIE</h4>
                         <ul>
