--- a/IMMUNOLOGIE_S1.html
+++ b/IMMUNOLOGIE_S1.html
@@ -532,10 +532,10 @@
                         <i class="fas fa-chevron-down"></i>
                     </div>
                     <div class="resources-options">
-                        <button class="resource-btn pdf-btn" onclick="window.open('https://drive.google.com/file/d/1aWWeZm1CUV7swlHWkKhBv1yGEK2Wnozo/view?usp=sharing', '_blank'); event.stopPropagation();">
+                        <button class="resource-btn pdf-btn" onclick="window.open('https://drive.google.com/file/d/1krIkxRWbcKCD5B3jCIEE4kTmBfuQg9jz/view?usp=sharing', '_blank'); event.stopPropagation();">
                             <i class="fas fa-file-pdf"></i> PDF
                         </button>
-                        <button class="resource-btn video-btn">
+                        <button class="resource-btn video-btn" onclick="window.open('https://drive.google.com/file/d/1MBwemR-C4exnAYxjI996nXHAPyhJuH1r/view?usp=sharing', '_blank'); event.stopPropagation();">
                             <i class="fas fa-video"></i> VIDÉO
                         </button>
                         <button class="resource-btn exam-btn" onclick="window.location.href='IMMUNOLOGIE_S1_Examen_de_cour1.html'">
