--- a/MICROBIOLOGIE_S1.html
+++ b/MICROBIOLOGIE_S1.html
@@ -532,10 +532,10 @@
                         <i class="fas fa-chevron-down"></i>
                     </div>
                     <div class="resources-options">
-                        <button class="resource-btn pdf-btn" onclick="window.open('https://drive.google.com/file/d/1aWWeZm1CUV7swlHWkKhBv1yGEK2Wnozo/view?usp=sharing', '_blank'); event.stopPropagation();">
+                        <button class="resource-btn pdf-btn" onclick="window.open('https://drive.google.com/file/d/1DQTY7RxCotM7Dk4oUdLoz591qoFuL3CJ/view?usp=sharing', '_blank'); event.stopPropagation();">
                             <i class="fas fa-file-pdf"></i> PDF
                         </button>
-                        <button class="resource-btn video-btn">
+                        <button class="resource-btn video-btn" onclick="window.open('https://drive.google.com/file/d/1XEuYycWn628oN7ahBn6YZkTlkrafQECg/view?usp=sharing', '_blank'); event.stopPropagation();">
                             <i class="fas fa-video"></i> VIDÉO
                         </button>
                         <button class="resource-btn exam-btn" onclick="window.location.href='MICROBIOLOGIE_S1_Examen_de_cour1.html'">
@@ -551,10 +551,10 @@
                         <i class="fas fa-chevron-down"></i>
                     </div>
                     <div class="resources-options">
-                        <button class="resource-btn pdf-btn" onclick="window.open('https://drive.google.com/file/d/1aWWeZm1CUV7swlHWkKhBv1yGEK2Wnozo/view?usp=sharing', '_blank'); event.stopPropagation();">
+                        <button class="resource-btn pdf-btn" onclick="window.open('https://drive.google.com/file/d/1mdiy9sbs6WFqP5ZV-4txfaH8OY7JSvga/view?usp=sharing', '_blank'); event.stopPropagation();">
                             <i class="fas fa-file-pdf"></i> PDF
                         </button>
-                        <button class="resource-btn video-btn">
+                        <button class="resource-btn video-btn" onclick="window.open('https://drive.google.com/file/d/1fMwwNxvutXAehJviRG3rb0HSq80S3P8z/view?usp=sharing', '_blank'); event.stopPropagation();">
                             <i class="fas fa-video"></i> VIDÉO
                         </button>
                         <button class="resource-btn exam-btn" onclick="window.location.href='MICROBIOLOGIE_S1_Examen_de_cour2.html'">
@@ -570,10 +570,10 @@
                         <i class="fas fa-chevron-down"></i>
                     </div>
                     <div class="resources-options">
-                        <button class="resource-btn pdf-btn" onclick="window.open('https://drive.google.com/file/d/1aWWeZm1CUV7swlHWkKhBv1yGEK2Wnozo/view?usp=sharing', '_blank'); event.stopPropagation();">
+                        <button class="resource-btn pdf-btn" onclick="window.open('https://drive.google.com/file/d/1w8kc0uJUpA0-31SRXetSHiJdT8FEg5LG/view?usp=sharing', '_blank'); event.stopPropagation();">
                             <i class="fas fa-file-pdf"></i> PDF
                         </button>
-                        <button class="resource-btn video-btn">
+                        <button class="resource-btn video-btn" onclick="window.open('https://drive.google.com/file/d/1gaVZcGSkR3EIfTO_3ICD8vOimzu-umh9/view?usp=sharing', '_blank'); event.stopPropagation();">
                             <i class="fas fa-video"></i> VIDÉO
                         </button>
                         <button class="resource-btn exam-btn" onclick="window.location.href='MICROBIOLOGIE_S1_Examen_de_cour3.html'">
