--- a/commandez.html
+++ b/commandez.html
@@ -639,7 +639,7 @@
             <a href="https://eccp.poste.dz/" class="order-main-btn" target="_blank">
                 Commandez Vos Documents
             </a>
-            <p>Choisissez vos documents et payez facilement par Mobile Money.</p>
+            <p>Choisissez vos documents et payez facilement par BaridyMob.</p>
             
             <!-- معلومات الدفع المضافة -->
             <div class="payment-info">
@@ -649,19 +649,19 @@
                         <span class="payment-label">
                             <i class="fas fa-hashtag"></i> RIP:
                         </span>
-                        <span class="payment-value">007 99876 1234567 89</span>
+                        <span class="payment-value">00799999004007516212</span>
                     </div>
                     <div class="payment-item">
                         <span class="payment-label">
                             <i class="fas fa-wallet"></i> CCP:
                         </span>
-                        <span class="payment-value">012-3456789-90</span>
+                        <span class="payment-value">40075162</span>
                     </div>
                     <div class="payment-item">
                         <span class="payment-label">
                             <i class="fas fa-key"></i> Clé:
                         </span>
-                        <span class="payment-value">GHANI2025</span>
+                        <span class="payment-value">79</span>
                     </div>
                 </div>
                 <p style="color: #ffeb3b; font-style: italic; margin: 0;">
@@ -730,7 +730,7 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td class="offer-name">Vidéo unique</td>
+                        <td class="offer-name">un seul vidéo + un seul PDF</td>
                         <td class="price">50 DA</td>
                     </tr>
                 </tbody>
