--- a/index.html
+++ b/index.html
@@ -1191,7 +1191,7 @@
                     </div>
                     <div class="stat-card">
                         <div class="stat-icon">
-                            <i class="fas fa-hand-holding-usd"></i>
+                            <i class="fas fa-hands-helping"></i>
                         </div>
                         <div class="stat-number" data-target="8">0</div>
                         <div class="stat-label">Contributeurs</div>
