--- a/index.html
+++ b/index.html
@@ -1214,13 +1214,13 @@
                         <p>Vous avez une question, une suggestion ou vous souhaitez collaborer avec nous ?</p>
                         <p>N'hésitez pas à nous contacter par :</p>
                         <p>
-                            <a href="tel:+213123456789">Téléphone</a> | 
+                            <a href="tel:+213555079282">Téléphone</a> | 
                             <!-- Gmail للكمبيوتر فقط -->
                             <a href="https://mail.google.com/mail/?view=cm&fs=1&to=ghanipharmadz@gmail.com&su=Contact%20GhaniPharma&body=Bonjour," target="_blank" class="desktop-only">Gmail</a>
                             <!-- Email للهاتف فقط -->
                             <a href="mailto:ghanipharmadz@gmail.com" class="mobile-only">Email</a> | 
-                            <a href="https://wa.me/213123456789" target="_blank">WhatsApp</a> | 
-                            <a href="https://t.me/ghani_rouabah" target="_blank">Telegram</a> | 
+                            <a href="https://wa.me/213555079282" target="_blank">WhatsApp</a> | 
+                            <a href="https://t.me/ghanirouabah" target="_blank">Telegram</a> | 
                             <a href="https://www.facebook.com/ghani.rouabah.2025" target="_blank">Facebook</a> | 
                             <a href="https://www.instagram.com/ghani.rouabah/" target="_blank">Instagram</a> | 
                             <a href="https://www.tiktok.com/@ghani.rouabah" target="_blank">TikTok</a>
@@ -1291,10 +1291,10 @@
     <footer>
         <div class="footer-content">
             <div class="social-links">
-                <a href="https://wa.me/213123456789" class="social-link whatsapp" target="_blank" title="WhatsApp">
+                <a href="https://whatsapp.com/channel/0029Vb7Hh2E8fewxLyVJbh2c" class="social-link whatsapp" target="_blank" title="WhatsApp">
                     <i class="fab fa-whatsapp"></i>
                 </a>
-                <a href="https://t.me/ghani_rouabah" class="social-link telegram" target="_blank" title="Telegram">
+                <a href="https://t.me/+Nj53VC8ZbwZjYzc0" class="social-link telegram" target="_blank" title="Telegram">
                     <i class="fab fa-telegram-plane"></i>
                 </a>
                 <a href="https://www.facebook.com/ghani.rouabah.2025" class="social-link facebook" target="_blank" title="Facebook">
