--- a/index.html
+++ b/index.html
@@ -1294,7 +1294,7 @@
                 <a href="https://whatsapp.com/channel/0029Vb7Hh2E8fewxLyVJbh2c" class="social-link whatsapp" target="_blank" title="WhatsApp">
                     <i class="fab fa-whatsapp"></i>
                 </a>
-                <a href="https://t.me/+Nj53VC8ZbwZjYzc0" class="social-link telegram" target="_blank" title="Telegram">
+                <a href="https://t.me/ghanipharma" class="social-link telegram" target="_blank" title="Telegram">
                     <i class="fab fa-telegram-plane"></i>
                 </a>
                 <a href="https://www.facebook.com/ghani.rouabah.2025" class="social-link facebook" target="_blank" title="Facebook">
