--- a/IMMUNOLOGIE_S1.html
+++ b/IMMUNOLOGIE_S1.html
@@ -528,7 +528,10 @@
                 <!-- الفصل 1 -->
                 <div class="chapter-card" onclick="toggleChapter(this)">
                     <div class="chapter-title">
-                        Introduction à l'immunologie
+                        <div style="text-align: center;">
+                            Introduction à l'immunologie
+                            <div style="color: yellow; display: block;">GRATUIT</div>
+                        </div>
                         <i class="fas fa-chevron-down"></i>
                     </div>
                     <div class="resources-options">
