--- a/IMMUNOLOGIE_S1.html
+++ b/IMMUNOLOGIE_S1.html
@@ -530,7 +530,7 @@
                     <div class="chapter-title">
                         <div style="text-align: center;">
                             Introduction à l'immunologie
-                            <div style="color: yellow; display: block;">GRATUIT</div>
+                            <div style="color: red; display: block;">GRATUIT</div>
                         </div>
                         <i class="fas fa-chevron-down"></i>
                     </div>
