--- a/modules.html
+++ b/modules.html
@@ -975,8 +975,8 @@
                         <h4 onclick="toggleSemesters(this)">BIOCHIMIE CLINIQUE</h4>
                         <ul>
                             <li><a href="BIOCHIMIE_CLINIQUE_S1.html">Semestre 1</a></li>
-                            <li><a href="BIOCHIMIE_CLINIQUE_S2.html">Semestre 2</a></li>
-                            <li><a href="BIOCHIMIE_CLINIQUE_S3.html">Semestre 3</a></li>
+                            <li><a href="#" onclick="showAlert(); return false;">Semestre 2</a></li>
+                            <li><a href="#" onclick="showAlert(); return false;">Semestre 3</a></li>
                         </ul>
                     </div>
                 </div>
@@ -988,8 +988,8 @@
                         <h4 onclick="toggleSemesters(this)">HEMOBIOLOGIE</h4>
                         <ul>
                             <li><a href="HEMOBIOLOGIE_S1.html">Semestre 1</a></li>
-                            <li><a href="HEMOBIOLOGIE_S2.html">Semestre 2</a></li>
-                            <li><a href="HEMOBIOLOGIE_S3.html">Semestre 3</a></li>
+                            <li><a href="#" onclick="showAlert(); return false;">Semestre 2</a></li>
+                            <li><a href="#" onclick="showAlert(); return false;">Semestre 3</a></li>
                         </ul>
                     </div>
                 </div>
@@ -1001,8 +1001,8 @@
                         <h4 onclick="toggleSemesters(this)">IMMUNOLOGIE</h4>
                         <ul>
                             <li><a href="IMMUNOLOGIE_S1.html">Semestre 1</a></li>
-                            <li><a href="IMMUNOLOGIE_S2.html">Semestre 2</a></li>
-                            <li><a href="IMMUNOLOGIE_S3.html">Semestre 3</a></li>
+                            <li><a href="#" onclick="showAlert(); return false;">Semestre 2</a></li>
+                            <li><a href="#" onclick="showAlert(); return false;">Semestre 3</a></li>
                         </ul>
                     </div>
                 </div>
@@ -1014,8 +1014,8 @@
                         <h4 onclick="toggleSemesters(this)">MICROBIOLOGIE</h4>
                         <ul>
                             <li><a href="MICROBIOLOGIE_S1.html">Semestre 1</a></li>
-                            <li><a href="MICROBIOLOGIE_S2.html">Semestre 2</a></li>
-                            <li><a href="MICROBIOLOGIE_S3.html">Semestre 3</a></li>
+                            <li><a href="#" onclick="showAlert(); return false;">Semestre 2</a></li>
+                            <li><a href="#" onclick="showAlert(); return false;">Semestre 3</a></li>
                         </ul>
                     </div>
                 </div>
@@ -1027,8 +1027,8 @@
                         <h4 onclick="toggleSemesters(this)">PARASITOLOGIE</h4>
                         <ul>
                             <li><a href="PARASITOLOGIE_S1.html">Semestre 1</a></li>
-                            <li><a href="PARASITOLOGIE_S2.html">Semestre 2</a></li>
-                            <li><a href="PARASITOLOGIE_S3.html">Semestre 3</a></li>
+                            <li><a href="#" onclick="showAlert(); return false;">Semestre 2</a></li>
+                            <li><a href="#" onclick="showAlert(); return false;">Semestre 3</a></li>
                         </ul>
                     </div>
                 </div>
