--- a/commandez.html
+++ b/commandez.html
@@ -394,6 +394,12 @@
             font-size: 1.2rem;
         }
         
+        .free-price {
+            font-weight: bold;
+            color: #4CAF50;
+            font-size: 1.2rem;
+        }
+        
         .offer-name {
             font-weight: bold;
             text-align: left;
@@ -692,8 +698,20 @@
                 </thead>
                 <tbody>
                     <tr>
+                        <td class="offer-name">PDF unique</td>
+                        <td class="price">30 DA</td>
+                    </tr>
+                    <tr>
                         <td class="offer-name">Vidéo unique</td>
-                        <td class="price">50 DA</td>
+                        <td class="price">90 DA</td>
+                    </tr>
+                    <tr>
+                        <td class="offer-name">PDF + Vidéo</td>
+                        <td class="price">100 DA</td>
+                    </tr>
+                    <tr>
+                        <td class="offer-name">Examens</td>
+                        <td class="free-price">Gratuit</td>
                     </tr>
                 </tbody>
             </table>
