--- a/modules.html
+++ b/modules.html
@@ -611,6 +611,10 @@
     </style>
 </head>
 <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K8Z979C9"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <!-- رسالة التنبيه -->
     <div id="alertMessage" class="alert-message">
         Désolé, pas de contenu disponible pour le moment.
