--- a/commandez.html
+++ b/commandez.html
@@ -593,6 +593,10 @@
     </style>
 </head>
 <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K8Z979C9"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <!-- الشريط العلوي والأزرار الثابتة -->
     <div class="top-bar" id="mainHeader">
         <header>
