--- a/modules.html
+++ b/modules.html
@@ -1147,10 +1147,10 @@
     <footer>
         <div class="footer-content">
             <div class="social-links">
-                <a href="https://wa.me/213123456789" class="social-link whatsapp" target="_blank" title="WhatsApp">
+                <a href="https://whatsapp.com/channel/0029Vb7Hh2E8fewxLyVJbh2c" class="social-link whatsapp" target="_blank" title="WhatsApp">
                     <i class="fab fa-whatsapp"></i>
                 </a>
-                <a href="https://t.me/ghani_rouabah" class="social-link telegram" target="_blank" title="Telegram">
+                <a href="https://t.me/ghanipharma" class="social-link telegram" target="_blank" title="Telegram">
                     <i class="fab fa-telegram-plane"></i>
                 </a>
                 <a href="https://www.facebook.com/ghani.rouabah.2025" class="social-link facebook" target="_blank" title="Facebook">
