--- a/modules.html
+++ b/modules.html
@@ -617,7 +617,7 @@
     <!-- End Google Tag Manager (noscript) -->
     <!-- رسالة التنبيه -->
     <div id="alertMessage" class="alert-message">
-        Désolé, pas de contenu disponible pour le moment.
+        Désolé, seuls les cours de 4ème année S1 sont disponibles pour le moment.
     </div>
     
     <!-- الشريط العلوي والأزرار الثابتة -->
