--- a/IMMUNOLOGIE_S1.html
+++ b/IMMUNOLOGIE_S1.html
@@ -566,6 +566,28 @@
                         </button>
                     </div>
                 </div>
+                
+                <!-- الفصل 2 - Les organes lymphoïdes -->
+                <div class="chapter-card" onclick="toggleChapter(this)">
+                    <div class="chapter-title">
+                        <div style="text-align: center;">
+                            Les organes lymphoïdes
+                            <div style="color: red; display: block;">GRATUIT</div>
+                        </div>
+                        <i class="fas fa-chevron-down"></i>
+                    </div>
+                    <div class="resources-options">
+                        <button class="resource-btn pdf-btn" onclick="window.open('#', '_blank'); event.stopPropagation();">
+                            <i class="fas fa-file-pdf"></i> PDF
+                        </button>
+                        <button class="resource-btn video-btn" onclick="window.open('#', '_blank'); event.stopPropagation();">
+                            <i class="fas fa-video"></i> VIDÉO
+                        </button>
+                        <button class="resource-btn exam-btn" onclick="window.location.href='IMMUNOLOGIE_S1_Examen_de_cour2.html'">
+                            <i class="fas fa-clipboard-list"></i> EXAMEN
+                        </button>
+                    </div>
+                </div>
             </div>
         </div>
         
