--- a/IMMUNOLOGIE_S1.html
+++ b/IMMUNOLOGIE_S1.html
@@ -576,7 +576,7 @@
                         <i class="fas fa-chevron-down"></i>
                     </div>
                     <div class="resources-options">
-                        <button class="resource-btn pdf-btn" onclick="window.open('#', '_blank'); event.stopPropagation();">
+                        <button class="resource-btn pdf-btn" onclick="window.open('https://drive.google.com/drive/folders/1KEeRoV3JLla5B_3stn2xWpEMyVZqsPra', '_blank'); event.stopPropagation();">
                             <i class="fas fa-file-pdf"></i> PDF
                         </button>
                         <button class="resource-btn video-btn" onclick="window.open('#', '_blank'); event.stopPropagation();">
