--- a/IMMUNOLOGIE_S1.html
+++ b/IMMUNOLOGIE_S1.html
@@ -579,7 +579,7 @@
                         <button class="resource-btn pdf-btn" onclick="window.open('https://drive.google.com/drive/folders/1KEeRoV3JLla5B_3stn2xWpEMyVZqsPra', '_blank'); event.stopPropagation();">
                             <i class="fas fa-file-pdf"></i> PDF
                         </button>
-                        <button class="resource-btn video-btn" onclick="window.open('#', '_blank'); event.stopPropagation();">
+                        <button class="resource-btn video-btn" onclick="window.open('https://drive.google.com/drive/folders/1KEeRoV3JLla5B_3stn2xWpEMyVZqsPra', '_blank'); event.stopPropagation();">
                             <i class="fas fa-video"></i> VIDÉO
                         </button>
                         <button class="resource-btn exam-btn" onclick="window.location.href='IMMUNOLOGIE_S1_Examen_de_cour2.html'">
