--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     <!-- End Google Tag Manager -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="GhaniPharma - Votre plateforme complète pour les études pharmaceutiques. Cours, TPs, TDs, examens et ressources pédagogiques pour étudiants en pharmacie.">
+    <meta name="description" content="Ce site a été créé pour aider les étudiants en pharmacie à comprendre facilement leurs modules, avec des examens pour chaque matière et pour chaque semestre.
+    Notre objectif est de rendre les sciences pharmaceutiques accessibles à tous, avec des contenus fiables, simples et adaptés au programme universitaire.
+    Que vous soyez en première année ou en fin de cycle, ce site est fait pour vous !">
     <meta name="keywords" content="pharmacie, études pharmaceutiques, cours pharmacie, TPs pharmacie, TDs pharmacie, examens pharmacie, étudiants pharmacie, ressources pédagogiques, GhaniPharma, sciences pharmaceutiques, غاني فارما, دروس صيدلة في الجزائر">
     <meta name="author" content="Ghani Rouabah">
     <meta name="robots" content="index, follow">
@@ -1193,7 +1195,8 @@
                         <a href="modules.html" style="color: #00bcd4; text-decoration: none; font-weight: bold; transition: all 0.3s ease; border-bottom: 1px solid transparent;" 
                            onmouseover="this.style.color='#4dd0e1'; this.style.borderBottomColor='#4dd0e1'" 
                            onmouseout="this.style.color='#00bcd4'; this.style.borderBottomColor='transparent'">modules</a>.</p></p>
-                        <p>Notre objectif est de rendre les sciences pharmaceutiques accessibles à tous, avec des contenus fiables, simples et adaptés au programme universitaire.</p>
+                        <p>Ce site a été créé pour aider les étudiants en pharmacie à comprendre facilement leurs modules, avec des examens pour chaque matière et pour chaque semestre.
+                        Notre objectif est de rendre les sciences pharmaceutiques accessibles à tous, avec des contenus fiables, simples et adaptés au programme universitaire.</p>
                         <p>Que vous soyez en première année ou en fin de cycle, ce site est fait pour vous !</p>
                     </div>
                 </div>
@@ -1207,7 +1210,7 @@
                         <div class="stat-icon">
                             <i class="fas fa-users"></i>
                         </div>
-                        <div class="stat-number" data-target="374">0</div>
+                        <div class="stat-number" data-target="388">0</div>
                         <div class="stat-label">Visiteurs</div>
                     </div>
                     <div class="stat-card">
