--- a/index.html
+++ b/index.html
@@ -1194,9 +1194,8 @@
                         <p><p>Ce site a été créé pour aider les étudiants en pharmacie à comprendre facilement leurs 
                         <a href="modules.html" style="color: #00bcd4; text-decoration: none; font-weight: bold; transition: all 0.3s ease; border-bottom: 1px solid transparent;" 
                            onmouseover="this.style.color='#4dd0e1'; this.style.borderBottomColor='#4dd0e1'" 
-                           onmouseout="this.style.color='#00bcd4'; this.style.borderBottomColor='transparent'">modules</a>.</p></p>
-                        <p>Ce site a été créé pour aider les étudiants en pharmacie à comprendre facilement leurs modules, avec des examens pour chaque matière et pour chaque semestre.
-                        Notre objectif est de rendre les sciences pharmaceutiques accessibles à tous, avec des contenus fiables, simples et adaptés au programme universitaire.</p>
+                           onmouseout="this.style.color='#00bcd4'; this.style.borderBottomColor='transparent'">modules</a>, avec des examens pour chaque matière et pour chaque semestre.</p></p>
+                        <p>Notre objectif est de rendre les sciences pharmaceutiques accessibles à tous, avec des contenus fiables, simples et adaptés au programme universitaire.</p>
                         <p>Que vous soyez en première année ou en fin de cycle, ce site est fait pour vous !</p>
                     </div>
                 </div>
